[kicker/kickoff] Fix urls for search results

Having the right url is needed for drag and drop to work

For the recentdocuments runner  we can just take the result

For the services runner the result is of the form "applications:org.kde.foo.desktop", so extract the service name from that

BUG: 456984